--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -82,9 +82,9 @@
 
   <div class="container my-3">
     <div class="row">
-      <div class="col-md-8 col-lg-9">
+      <div class="col-md-8 col-lg-9" id="main-area">
         <h1>Blog</h1>
-
+{% if post_list.exists %}
 {% for p in post_list %}
 <!--Blog Post-->
         <div class="card mb-4">
@@ -104,6 +104,9 @@
           </div>
       </div>
      {% endfor %}
+          {% else %}
+          <h3>아직 게시물이 없습니다.</h3>
+          {% endif %}
  <!-- Pagination-->
  <nav aria-label="Pagination">
   <hr class="my-0" />
