--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,44 +1,46 @@
 {% extends 'blog/base.html' %}
 
-{% block main_area %}
+        {% block main_area %}
+          <h1>Blog</h1>
 
-        <h1>Blog</h1>
-{% if post_list.exists %}
-{% for p in post_list %}
-<!--Blog Post-->
-        <div class="card mb-4">
-        {% if p.head_image %}
-          <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image" />
-            {% else %}
-            <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image" />
-            {% endif %}
-          <div class="card-body">
-              <div class="small text-muted">{{ p.created_at}} by {{ p.author | upper }}</div>
-              <h2 class="card-title h4">{{ p.title }}</h2>
-              {% if p.hook_text %}
-                <h5 class="text-muted">{{ p.hook_text }}</h5>
+          {% if post_list.exists %}
+          {% for p in post_list %}
+          <!-- Blog post-->
+          <div class="card mb-4" id="post-{{ p.pk }}">
+              {% if p.head_image %}
+                <img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }}" />
+              {% else %}
+                <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image" />
               {% endif %}
-              <p class="card-text">{{ p.content | truncatewords:45 }}</p>
-              <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
-          </div>
-      </div>
-     {% endfor %}
-          {% else %}
-          <h3>아직 게시물이 없습니다.</h3>
-          {% endif %}
- <!-- Pagination-->
- <nav aria-label="Pagination">
-  <hr class="my-0" />
-  <ul class="pagination justify-content-center my-4">
-      <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-      <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-      <li class="page-item"><a class="page-link" href="#!">2</a></li>
-      <li class="page-item"><a class="page-link" href="#!">3</a></li>
-      <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-      <li class="page-item"><a class="page-link" href="#!">15</a></li>
-      <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-  </ul>
-</nav>
-    </div>
+              <div class="card-body">
+                  {% if p.category %}
+                  <span class="badge badge-secondary float-right">{{ p.category }}</span>
 
-{% endblock %}
+                  {% else %}
+                  <span class="badge badge-secondary float-right">미분류</span>
+
+                  {% endif %}
+                  <div class="small text-muted">{{ p.created_at }} by {{ p.author | upper }}</div>
+                  <h2 class="card-title h4">{{ p.title }}</h2>
+                  {% if p.hook_text %}
+                    <h5 class="text-muted">{{ p.hook_text }}</h5>
+                  {% endif %}
+                  <p class="card-text">{{ p.content | truncatewords:45 }}</p>
+                  <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
+              </div>
+          </div>
+          {% endfor %}
+          {% else %}
+            <h3>아직 게시물이 없습니다.</h3>
+          {% endif %}
+
+          <ul class="pagination justify-content-center my-4">
+            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
+            <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
+            <li class="page-item"><a class="page-link" href="#!">2</a></li>
+            <li class="page-item"><a class="page-link" href="#!">3</a></li>
+            <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
+            <li class="page-item"><a class="page-link" href="#!">15</a></li>
+            <li class="page-item"><a class="page-link" href="#!">Older</a></li>
+          </ul>
+        {% endblock %}
