태그페이지 만들기

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,6 +5,7 @@
     <title>{% block head_title %}Blog{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}"
     media="screen">
+      <script src="https://kit.fontawesome.com/dc96642a54.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
