--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -43,14 +43,14 @@
                         </section>
 
                         {% if post.tags.exists %}
-                            <i class="fas fa-tags"></i>
+                            <i class="fa-solid fa-hashtag"></i>
                             {% for tag in post.tags.all %}
                                 <a href="{{ tag.get_absolute_url }}" class="badge badge-light">{{ tag }}</a>
                             {% endfor %}
                             <br />
                             <br />
                         {% endif %}
-                        
+
 
                         {% if post.file_upload %}
                         <a href="{{ post.file_upload.url }}" class="btn btn-outline-dark" role="button" download>
