--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,9 @@
 {% extends 'blog/base.html' %}
 
         {% block main_area %}
-          <h1>Blog {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}</h1>
+          <h1>Blog {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}
+          {% if tag %}<span class="badge badge-light"><i class="fa-solid fa-hashtag"></i>{{ tag }} ({{ tag.post_set.count }})</span>{% endif %}
+          </h1>
 
           {% if post_list.exists %}
           {% for p in post_list %}
@@ -27,7 +29,7 @@
                   {% endif %}
                   <p class="card-text">{{ p.content | truncatewords:45 }}</p>
                     {% if p.tags.exists %}
-                        <i class="fas fa-tags"></i>
+                        <i class="fa-solid fa-hashtag"></i>
                         {% for tag in p.tags.iterator %}
                             <a href="{{ tag.get_absolute_url }}"><span class="badge badge-pill badge-light">{{ tag }}</span></a>
                         {% endfor %}
