--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,20 +1,20 @@
 {% extends 'blog/base.html' %}
 
 {% block head_title %}
+
     {{ post.title }} - Blog
+
 {% endblock %}
 
 {% block main_area %}
+                    <div id="post-area">
+                      {% if post.category %}
+                      <span class="badge badge-secondary float-right">{{ post.category }}</span>
 
-                <div id="post-area">
-                    {% if post.category %}
-                  <span class="badge badge-secondary float-right">{{ post.category }}</span>
+                      {% else %}
+                      <span class="badge badge-secondary float-right">미분류</span>
 
-                  {% else %}
-                  <span class="badge badge-secondary float-right">미분류</span>
-
-                  {% endif %}
-
+                      {% endif %}
                     <!-- Post content-->
                     <article>
                         <!-- Post header-->
@@ -24,11 +24,13 @@
                             <h5 class="text-muted">{{ post.hook_text }}</h5>
 
                             <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }}, 2022 by {{ post.author | upper }}</div>
+                            <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} by {{ post.author | upper }}</div>
 
-                            <!--Edit {ost 버튼 추가-->
+                            <!-- Edit Post 버튼 추가 위치는 -->
                             {% if user.is_authenticated and user == post.author %}
-                                <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{ post.pk }}/" role="button"><i class="fas fa-pen"></i> Edit Post</a>
+                                <a class="btn btn-info bnt-sm float-right" href="/blog/update_post/{{ post.pk }}" role="button">
+                                    <i class="fas fa-pen"></i>&nbsp;&nbsp;Edit Post
+                                </a>
                             {% endif %}
 
                             <!-- Post categories-->
@@ -38,77 +40,53 @@
                         <!-- Preview image figure-->
                         <figure class="mb-4">
                             {% if post.head_image %}
-                            <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image" />
+                                <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }}" />
                             {% else %}
-                            <img class="img-fluid rounded" src="https://picsum.photos/seed/{{ post.id }}/800/200" alt="random_image" />
-                        {% endif %}
-                            </figure>
+                                <img class="card-img-top" src="https://picsum.photos/seed/{{ post.id }}/800/200" alt="random_image" />
+                            {% endif %}
+                        </figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             {{ post.get_content_markdown | safe }}
                         </section>
 
-                        {% if post.tags.exists %}
-                            <i class="fa-solid fa-hashtag"></i>
+                          {% if post.tags.exists %}
+                            <i class="fa-solid fa-tags"></i>
                             {% for tag in post.tags.all %}
-                                <a href="{{ tag.get_absolute_url }}" class="badge badge-light">{{ tag }}</a>
+                                <a href="{{ tag.get_absolute_url }}"><span class="badge badge-pill badge-light">{{ tag }}</span></a>
                             {% endfor %}
-                            <br />
-                            <br />
-                        {% endif %}
+                            <br /><br />
+                          {% endif %}
+
 
 
                         {% if post.file_upload %}
-                        <a href="{{ post.file_upload.url }}" class="btn btn-outline-dark" role="button" download>
-                            <i class="fa-regular fa-file"></i> {{ post.get_file_name }}
-                        </a>
+                            <a href="{{ post.file_upload.url }}"
+                               class="btn btn-outline-primary" role="button" download>
+                                <i class="fa-solid fa-file"></i> {{ post.get_file_name }}
+                            </a>
                         {% endif %}
                     </article>
                     </div>
-
-
                     <!-- Comments section-->
-                <div id="comment-area">
+                    <div id="comment-area">
                     <section class="mb-5">
                         <div class="card bg-light">
                             <div class="card-body">
-
                                 <!-- Comment form-->
                                 <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
-                                <!-- Comment with nested comments-->
-                                <div class="d-flex mb-4">
-                                    <!-- Parent comment-->
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                    <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        If you're going to lead a space frontier, it has to be government; it'll never be private enterprise. Because the space frontier is dangerous, and it's expensive, and it has unquantified risks.
-                                        <!-- Child comment 1-->
-                                        <div class="d-flex mt-4">
-                                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                            <div class="ms-3">
-                                                <div class="fw-bold">Commenter Name</div>
-                                                And under those conditions, you cannot establish a capital-market evaluation of that enterprise. You can't get investors.
-                                            </div>
-                                        </div>
-                                        <!-- Child comment 2-->
-                                        <div class="d-flex mt-4">
-                                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
-                                            <div class="ms-3">
-                                                <div class="fw-bold">Commenter Name</div>
-                                                When you put money directly to a problem, it makes a good headline.
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
                                 <!-- Single comment-->
-                                <div class="d-flex">
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                {% if post.comment_set.exists %}
+                                {% for comment in post.comment_set.iterator %}
+                                <div class="d-flex" id="comment-{{ comment.pk }}">
+                                    <div class="flex-shrink-0 mr-3"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
                                     <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        When I look at the universe and all the ways the universe wants to kill us, I find it hard to reconcile that with statements of beneficence.
-                                    </div>
+                                        <div class="fw-bold">{{ comment.author.username }} &nbsp;&nbsp; <small class="text-muted">{{ comment.created_at }}</small></div>
+                                        <p>{{ comment.content  | linebreaks }}</p>
+                                   </div>
                                 </div>
+                                {% endfor %}
+                                {% endif %}
                             </div>
                         </div>
                     </section>
