--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block head_title %}
 
@@ -74,7 +75,18 @@
                         <div class="card bg-light">
                             <div class="card-body">
                                 <!-- Comment form-->
-                                <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
+                                {% if user.is_authenticated %}
+                                <form id="comment-form" method="POST" action="{{ post.get_absolute_url }}new_comment/" class="mb-4">{{ comment_form | crispy }}
+                                    {% csrf_token %}
+
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+
+                                </form>
+                                {% else %}
+                                    <textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
+                                    <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
+                                {% endif %}
+
                                 <!-- Single comment-->
                                 {% if post.comment_set.exists %}
                                 {% for comment in post.comment_set.iterator %}
