댓글 수정 기능 추가하기

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,5 @@
 {% extends 'blog/base.html' %}
 {% load crispy_forms_tags %}
-
 {% block head_title %}
 
     {{ post.title }} - Blog
@@ -74,27 +73,38 @@
                     <section class="mb-5">
                         <div class="card bg-light">
                             <div class="card-body">
-                                <!-- Comment form-->
                                 {% if user.is_authenticated %}
-                                <form id="comment-form" method="POST" action="{{ post.get_absolute_url }}new_comment/" class="mb-4">{{ comment_form | crispy }}
+                                <!-- Comment form-->
+                                <form id="comment-form" method="POST" action="{{ post.get_absolute_url }}new_comment/">
                                     {% csrf_token %}
-
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    {{ comment_form | crispy }}
+                                    <button type="submit" class="btn btn-primary mb-5">Submit</button>
 
                                 </form>
                                 {% else %}
-                                    <textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea>
-                                    <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
+                                <a role="button" class="btn btn-outline-dark btn-block btn-sm my-3" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a comment</a>
                                 {% endif %}
-
                                 <!-- Single comment-->
                                 {% if post.comment_set.exists %}
                                 {% for comment in post.comment_set.iterator %}
-                                <div class="d-flex" id="comment-{{ comment.pk }}">
+                                <div id="comment-{{ comment.pk }}">
                                     <div class="flex-shrink-0 mr-3"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+
+
                                     <div class="ms-3">
+                                        {% if user.is_authenticated and comment.author == user %}
+                                        <a role="button"
+                                           class="btn btn-sm btn-info float-right"
+                                           id="comment-{{ comment.pk }}-update-btn"
+                                           href="/blog/update_comment/{{ comment.pk }}/">
+                                            edit
+                                        </a>
+                                        {% endif %}
                                         <div class="fw-bold">{{ comment.author.username }} &nbsp;&nbsp; <small class="text-muted">{{ comment.created_at }}</small></div>
                                         <p>{{ comment.content  | linebreaks }}</p>
+                                        {% if comment.created_at != comment.modified_at %}
+                                            <p class="text-muted float-right"><small>Updated: {{ comment.modified_at }}</small></p>
+                                        {% endif %}
                                    </div>
                                 </div>
                                 {% endfor %}
