--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -25,6 +25,12 @@
         {% if user.is_authenticated %}
          <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+            {% if user.socialaccount_set.all.0.get_avatar_url %}
+                <img class="rounded-circle" width="25px" src="{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="">
+            {% else %}
+                <img class="rounded-circle" width="30px" src="https://doitdjango.com/avatar/id/1375/9f71ac48368fcf60/svg/{{ user.email }}">
+            {% endif %}
+            &nbsp;
             {{ user.username }}
           </a>
           <div class="dropdown-menu">
