--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -88,7 +88,7 @@
                                 {% if post.comment_set.exists %}
                                 {% for comment in post.comment_set.iterator %}
                                 <div id="comment-{{ comment.pk }}">
-                                    <div class="flex-shrink-0 mr-3"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                    <div class="flex-shrink-0 mr-3"><img class="rounded-circle" src="{{ comment.get_avatar_url }}" alt="{{ comment.author }}" width="60px"/></div>
 
 
                                     <div class="ms-3">
