--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -51,7 +51,7 @@
                         </section>
 
                           {% if post.tags.exists %}
-                            <i class="fa-solid fa-tags"></i>
+                            <i class="fa-solid fa-hashtag"></i>
                             {% for tag in post.tags.all %}
                                 <a href="{{ tag.get_absolute_url }}"><span class="badge badge-pill badge-light">{{ tag }}</span></a>
                             {% endfor %}
