자기소개 페이지 수정

--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -20,7 +20,7 @@
             <div class="col-lg-6 text-light">
                 &nbsp;
                 &nbsp;
-                <h1 class="mt-5">HYENNOH'S BLOG</h1>
+                <h1 class="mt-5">hyennoh's blog</h1>
 
             </div>
             <div class="col-lg-5 mt-5">
