--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title> Do It Django </title>
+    <title>hyworld</title>
 
     <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'single_pages/css/landing.css' %}" media="screen">
@@ -20,11 +20,11 @@
             <div class="col-lg-6 text-light">
                 &nbsp;
                 &nbsp;
-                <h1 class="mt-5">hyennoh's blog</h1>
+                <h1 class="mt-5">HYENNOH'S BLOG</h1>
 
             </div>
             <div class="col-lg-5 mt-5">
-                <h2 class="text-light">Blog - Recent posts</h2>
+                <h2 class="text-light">Recent posts</h2>
                 {% for post in recent_posts %}
                     <div class="card mt-1">
                         <div class="card-body">
