--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -18,11 +18,11 @@
     <div class="container mt-4">
         <div class="row">
             <div class="col-lg-8">
-                <h1>HYENNOH'S BLOG</h1>
+                &nbsp;
+                <h1>안녕하세요 혠오입니다! (*ᴗ͈ˬᴗ͈)ꕤ*.ﾟ</h1>
                 <br/>
-                <p class="lead">
-                    안녕하세요 혠오입니다! (*ᴗ͈ˬᴗ͈)ꕤ*.ﾟ<br/>
-                </p>
+                &nbsp;
+
 
                 <ul>
                     <li>CATEGORY</li>
