최최종 수정

--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -4,6 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <title> About 혠오 </title>
+    <style type="text/css">
+        @font-face {
+font-family: 'UhBeeKeongKeong';
+src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_five@.2.0/UhBeeKeongKeong.woff') format('woff');
+font-weight: normal;
+font-style: normal;
+}
+@font-face {
+    font-family: 'MapoBackpacking';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoBackpackingA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+ @font-face {
+    font-family: 'establishRoomNo703OTF';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2112@1.0/establishRoomNo703OTF.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'MICEGothic Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-01@1.0/MICEGothic Bold.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Jal_Haru';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.0/Jal_Haru.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+    </style>
 
     <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'single_pages/css/about_me.css' %}" media="screen">
@@ -19,22 +53,26 @@
         <div class="row">
             <div class="col-lg-8">
                 &nbsp;
-                <h1>안녕하세요 혠오입니다! (*ᴗ͈ˬᴗ͈)ꕤ*.ﾟ</h1>
-                <br/>
-                &nbsp;
+                <h1 style="font-family: 'UhBeeKeongKeong'">안녕하세요 혠오입니다! (*ᴗ͈ˬᴗ͈)ꕤ*.ﾟ</h1><br>
+
+                &nbsp;<br>
 
 
-                <ul>
-                    <li>CATEGORY</li>
-                    <ul>
+                <ul style="font-family: 'Jal_Haru'">
+                    <li >CATEGORY</li>
+
+                    <ul >
                         <li>일상</li>
+
                         <li>취미</li>
                     </ul>
                     &nbsp;
-                    <li>FAVORITE</li>
-                    <ul>
+                    <br>
+                    <li >FAVORITE</li>
+
+                    <ul >
                         <li>사진 찍는 것을 좋아합니다.</li>
-                        <li>자연이 좋아요, 특히 연두빛의 풍경을 좋아합니다.</li>
+                        <li>자연이 좋아요, 특히 연둣빛의 풍경을 좋아합니다.</li>
                     </ul>
                     &nbsp;
                 </ul>
@@ -50,7 +88,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2>A recent photographs</h2>
+                <br>
+                <h3 style="font-family: 'MICEGothic Bold'">A recent photographs</h3>
             </div>
         </div>
 
